3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openmap
  namespace: openmap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openmap
  template:
    metadata:
      labels:
        app: openmap
    spec:
      containers:
      - name: openmap-container
        image: klokantech/openmaptiles-server
        ports:
        - protocol: TCP
          containerPort: 80
        resources:
          limits:
            cpu: "3000m"
            memory: 8Gi
          requests:
            cpu: "2000m"
            memory: 4Gi
        volumeMounts:
         - name: openmap-volume
           mountPath: /data
      volumes:
      - name: openmap-volume
        persistentVolumeClaim:
          claimName: openmap-pvc
