4-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: openmap
  namespace: openmap
spec:
  type: ClusterIP
  selector:
    app: openmap
  ports:
  - port: 80
    protocol: TCP
